Posljedice uzrokovane premještanjem slika koje se koriste u .chm datoteci iz foldera \HelpFile\Images u \HelpFile\Images\Karlo

--- a/Software/WareHome/HelpFile/1. Uvod.htm
+++ b/Software/WareHome/HelpFile/1. Uvod.htm
@@ -10,7 +10,7 @@
   
 U nastavku prikazana je slika zaslona aplikacije nakon prijave korisnika te prijave u domaæinstvo. Na njoj su, radi lakšeg snalaženja, brojevnim oznakama oznaèena iduæa poglavlja koja se nalaze u ovom dokumentu.</p>
 
-<img src="Images/Home-screen.png" />
+<img src="Images/Karlo/Home-screen.png" />
 
 <p>U gornjem lijevom kutu prikazan je logo naše aplikacije. Klikom na taj logo, osvježava se popis namirnica.  
 Ispod loga nalaze se osnovni podaci o prijavljenom korisniku i njegovom domaæinstvu.  
