--- a/Software/WareHome/HelpFile/6.2. Izrada nove liste.htm
+++ b/Software/WareHome/HelpFile/6.2. Izrada nove liste.htm
@@ -10,11 +10,11 @@
   
 Ukoliko je lista javna, nakon unosa imena pritiskom na "Kreiraj" izrağuje se nova javna lista.</p>
   
-<img src="Images/Izrada nove liste - javna.png" />   
+<img src="Images/Karlo/Izrada nove liste - javna.png" />   
   
 <p>Ukoliko je lista privatna, nakon unosa imena i lozinke pritiskom na "Kreiraj" izrağuje se nova privatna lista.</p>
   
-<img src="Images/Izrada nove liste - privatna.png" />
+<img src="Images/Karlo/Izrada nove liste - privatna.png" />
 
 </BODY>
 </HTML>
