--- a/Software/WareHome/HelpFile/6.4. Promjena naziva i postavki postojece liste.htm
+++ b/Software/WareHome/HelpFile/6.4. Promjena naziva i postavki postojece liste.htm
@@ -12,7 +12,7 @@ Klikom na to, otvoriti æe se prozor slièan onom za izradu nove liste za kupovinu
 
 Nakon unosa svih promjena koje želite, pritiskom na "Završi" promjene se spremaju.</p>
 
-<img src="Images/Preimenovanje liste.png" />
+<img src="Images/Karlo/Preimenovanje liste.png" />
 
 </BODY>
 </HTML>
