--- a/Software/WareHome/HelpFile/6.5. Dodavanje namirnice na listu za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6.5. Dodavanje namirnice na listu za kupovinu.htm
@@ -13,7 +13,7 @@ Naziv je obavezno polje, sve ostalo može se unositi po želji i potrebi.
   
 Nakon unosa naziva i svih ostalih željenih podataka, pritiskom na "Dodaj" namirnica se dodaje na listu.  </p>
 
-<img src="Images/Dodavanje na listu.png" />
+<img src="Images/Karlo/Dodavanje na listu.png" />
 
 </BODY>
 </HTML>
