--- a/Software/WareHome/HelpFile/6.6. Uklanjanje namirnice s liste za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6.6. Uklanjanje namirnice s liste za kupovinu.htm
@@ -11,7 +11,7 @@
 Nakon što je namirnica odabrana, u potrebno je pritisnuti gumb "Ukloni" koji se nalazi pokraj gumba za dodavanje nove namirnice.  
 Klikom na gumb za uklanjanje namirnice, odabrana namirnica briše se iz liste za kupovinu.</p>
 
-<img src="Images/Brisanje sa liste.png" />
+<img src="Images/Karlo/Brisanje sa liste.png" />
 
 </BODY>
 </HTML>
