--- a/Software/WareHome/HelpFile/6.3. Brisanje postojece liste.htm
+++ b/Software/WareHome/HelpFile/6.3. Brisanje postojece liste.htm
@@ -11,7 +11,7 @@
 Nakon klika na obriši, otvoriti æe se prozor u kojem trebate potvrditi da želite obrisati listu za kupovinu te sve namirnice koje se na njoj nalaze. Klikom na "Yes" lista i sve namirnice koje se nalaze na njoj bit æe obrisane.
 Klikom na "No", brisanje æe biti poništeno i bit æete vraæeni na prikaz svih lista.</p>
 
-<img src="Images/Brisanje liste.png" />
+<img src="Images/Karlo/Brisanje liste.png" />
 
 </BODY>
 </HTML>
