Help fileovi za moj dio

--- a/Software/WareHome/HelpFile/2. Prijava u aplikaciju.htm
+++ b/Software/WareHome/HelpFile/2. Prijava u aplikaciju.htm
@@ -6,7 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Prvi zaslon koji korisnik vidi prilikom pokretanja aplikacije je zaslon za prijavu postojećeg korisnika. 
+Na tom zaslonu su još gumbovi koji vode na registraciju te gumb koji vodi na formu za povrat zaboravljene lozinke. 
+Korisnik koji je već registriran, samo upisuje svoje podatke i klika na gumb Prijava. 
+Ako nije registriran, klika na gumb Registracija. 
+Ako je pak registriran, ali je zaboravio lozinku, klika na labelu Zaboravljena lozinka.</p>
 
 </BODY>
 </HTML>
