--- a/Software/WareHome/HelpFile/2.1. Registracija novog korisnika.htm
+++ b/Software/WareHome/HelpFile/2.1. Registracija novog korisnika.htm
@@ -6,7 +6,13 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Na zaslon registracije se dolazi sa zaslona za prijavu. 
+Korisnik koji se želi registrirati mora u polja upisati svoje podatke, 
+koja moraju poštovati određena pravila kao npr. ispravan format e-mail adrese. 
+Nakon što korisnik ispuni sva polja i zadovoljan je s upisanim, klika na gumb Registracija te u 
+slučaju uspjehu aplikacija javlja da je korisnik registriran i aplikacija ga vraća na zaslon za prijavu.</p>
+
+<img src="Images/Antun/Registracija.png" />
 
 </BODY>
 </HTML>
