--- a/Software/WareHome/HelpFile/2.2. Prijava postojeceg korisnika.htm
+++ b/Software/WareHome/HelpFile/2.2. Prijava postojeceg korisnika.htm
@@ -6,7 +6,10 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Korisnik na ovom zaslonu upisuje svoje prethodno kreirano korisnicko ime i lozinku te klika na gumb Prijava. 
+U slucaju ispravnog unosa, korisnik je prijavljen i otvara mu se glavni zaslon aplikacije.</p>
+
+<img src="Images/Antun/Prijava.png" />
 
 </BODY>
 </HTML>
