--- a/Software/WareHome/HelpFile/2.3. Povrat zaboravljene lozinke.htm
+++ b/Software/WareHome/HelpFile/2.3. Povrat zaboravljene lozinke.htm
@@ -6,7 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Vrlo jednostavan zaslon gdje korisnik upisuje svoje korisničko ime te klika na gumb Pošalji mail, 
+nakon čega će mu aplikacija na e-mail adresu povezanu s tim korisničkim imenom poslati njegovu lozinku. 
+U slučaju uspješnog slanja maila, aplikacija će to korisniku dati do znanja.</p>
+
+<img src="Images/Antun/ZaboravljenaLozinka.png" />
 
 </BODY>
 </HTML>
