--- a/Software/WareHome/HelpFile/4. Upravljanje namirnicama.htm
+++ b/Software/WareHome/HelpFile/4. Upravljanje namirnicama.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Na glavnom zaslonu aplikacije nalaze se tablični pogled namirnica u domaćinstvu te gumbovi za dodavanje, 
+mijenjanje i brisanje namirnica. Također, u desnom kutu je i gumb za spremanje trenutnog stanja namirnica, 
+kao i statistiku njihova korištenja, u PDF dokument.</p>
 
 </BODY>
 </HTML>
