--- a/Software/WareHome/HelpFile/4.1. Dodavanje namirnice.htm
+++ b/Software/WareHome/HelpFile/4.1. Dodavanje namirnice.htm
@@ -6,7 +6,12 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Na zaslon za dodavanje namirnice se dođe klikom na gumb Dodaj namirnicu na glavnom zaslonu aplikacije. 
+Zaslon koji se otvara prikazuje nekoliko polja te labele koje služe kao pomoć korisniku da korektno upiše podatke o namirnici. 
+Nakon korektnog upisa svih obaveznih polja, može stisnuti gumb Spremi te se namirnica sprema u domaćinstvo, 
+a popis namirnica se automatski osvježava.</p>
+
+<img src="Images/Antun/DodavanjeNamirnice.png" />
 
 </BODY>
 </HTML>
