--- a/Software/WareHome/HelpFile/4.3. Brisanje namirnice.htm
+++ b/Software/WareHome/HelpFile/4.3. Brisanje namirnice.htm
@@ -6,7 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Korisnik može obrisati namirnicu tako da odabere namirnicu klikom na red u tabličnom prikazu, 
+te klikom na gumb Obriši namirnicu. 
+Namirnica se tada briše i tablični prikaz se osvježava.</p>
+
+<img src="Images/Antun/BrisanjeNamirnice.png" />
 
 </BODY>
 </HTML>
