--- a/Software/WareHome/HelpFile/4.4. Spremanje stanja u PDF.htm
+++ b/Software/WareHome/HelpFile/4.4. Spremanje stanja u PDF.htm
@@ -6,7 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Korisnik na glavnom zaslonu aplikacije može odabrati da trenutno stanje namirnica, kao i statistiku njihova korištenja, 
+spremi u PDF dokument klikom na gumb Spremi u PDF. 
+Klikom na gumb, otvara se dijalog gdje korisnik bira naziv i lokaciju spremanja datoteke.</p>
+
+<img src="Images/Antun/SpremanjeUPDF.png" />
 
 </BODY>
 </HTML>
