--- a/Software/WareHome/HelpFile/9. Odjava iz aplikacija.htm
+++ b/Software/WareHome/HelpFile/9. Odjava iz aplikacija.htm
@@ -6,7 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Korisnik se odjavljuje iz aplikacije klikom na gumb Odjava u donjem lijevom kutu glavnog zaslona aplikacije. 
+Klikom na gumb, otvara mu se zaslon za prijavu te se može natrag prijaviti u račun 
+ili se prijaviti u neki drugi račun koji je dio drugog domaćinstva.</p>
+
+<img src="Images/Antun/Odjava.png" />
 
 </BODY>
 </HTML>
