--- a/Software/WareHome/HelpFile/4.2. Uredivanje namirnice.htm
+++ b/Software/WareHome/HelpFile/4.2. Uredivanje namirnice.htm
@@ -6,7 +6,13 @@
 </HEAD>
 <BODY>
 
-<p>Antun</p>
+<p>Mijenjanje namirnice je zaslon na koji se dođe klikom na gumb Promijenu namirnicu na glavnom zaslonu aplikacije. 
+Korisnik prvo treba odabrati namirnicu koju želi uređivati (kliknuti na neki red u tabličnom prikazu) te kliknuti odgovarajući 
+gumb. Zaslon koji se otvara je analogan onome za dodavanje namirnice ali su polja već popunjena vrijednostima 
+odabrane namirnice. Mijenjajući neko od polja i klikom na gumb Spremi, 
+korisnik obavlja mijenjanje namirnice te se tablični prikaz automatski osvježava.</p>
+
+<img src="Images/Antun/PromijenaNamirnice.png" />
 
 </BODY>
 </HTML>
