HelpFile - uređivanje izgleda stranica (blok teksta rastavljen u više paragrafa radi preglednosti) - uređivanje teksta na svim mojim stranicama (č i ć pretvoreni u c zbog kompatibilnosti) - dodan default topic tako da dok se helpfile.chm ručno otvori prvo što se prikaže je stranica sadržaja

--- a/Software/WareHome/HelpFile/5.2. Iskljucivanje email podsjetnika.htm
+++ b/Software/WareHome/HelpFile/5.2. Iskljucivanje email podsjetnika.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Za iskljuèivanje email podsjetnika o kupovini, u polju gdje se odabire dan potrebno je odabrati opciju "-". Nakon što se odabere "-" u polju za odabir dana, polja za unos vremena æe se onemoguæiti. Na taj naèin, podsjetnik za odlazak u kupovinu je iskljuèen sve do kad se opet ne promijeni dan èime æe se automatski i polja za odabir vremena omoguæiti.</p>
+<p>Za iskljucivanje email podsjetnika o kupovini, u polju gdje se odabire dan potrebno je odabrati opciju "-". Nakon što se odabere "-" u polju za odabir dana, polja za unos vremena ce se onemoguciti. Na taj nacin, podsjetnik za odlazak u kupovinu je iskljucen sve do kad se opet ne promijeni dan cime ce se automatski i polja za odabir vremena omoguciti.</p>
 
 <img src="Images/Karlo/Raspored_iskljucen.png" />
 
