--- a/Software/WareHome/HelpFile/6. Koristenje lista za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6. Koristenje lista za kupovinu.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Klikom na "Liste za kupovinu", otvara se popis lista koje su izraðene u domaæinstvu u koje ste prijavljeni. Ukoliko niste èlan domaæinstva, ovaj dio aplikacije još ne možete koristiti. Molimo Vas, izradite novo domaæinstvo ili se prijavite u postojeæe.</p>
+<p>Klikom na "Liste za kupovinu", otvara se popis lista koje su izraðene u domacinstvu u koje ste prijavljeni. Ukoliko niste clan domacinstva, ovaj dio aplikacije još ne možete koristiti. Molimo Vas, izradite novo domacinstvo ili se prijavite u postojece.</p>
 
 </BODY>
 </HTML>
