--- a/Software/WareHome/HelpFile/6.2. Izrada nove liste.htm
+++ b/Software/WareHome/HelpFile/6.2. Izrada nove liste.htm
@@ -6,9 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Za izradu nove liste za kupovinu, na zaslonu gdje su prikazane sve liste za kupovinu potrebno je kliknuti na gumb "Kreiraj". To æe otvoriti novi prozor u kojem se prvo unosi naziv liste koji mora imati minimalno 1 i maksimalno 30 znakova. Nakon što unesete naziv, potrebno je odabrati želite li da lista bude privatna (zaštiæena lozinkom) ili ne. Ukoliko želite, nakon oznaèavanja potvrdnog okvira polje za unos lozinke æe se omoguæiti. Unesena lozinka može imati maksimalno 30 znakova. 
+<p>Za izradu nove liste za kupovinu, na zaslonu gdje su prikazane sve liste za kupovinu potrebno je kliknuti na gumb "Kreiraj". To ce otvoriti novi prozor u kojem se prvo unosi naziv liste koji mora imati minimalno 1 i maksimalno 30 znakova. Nakon što unesete naziv, potrebno je odabrati želite li da lista bude privatna (zašticena lozinkom) ili ne. Ukoliko želite, nakon oznacavanja potvrdnog okvira polje za unos lozinke ce se omoguciti. Unesena lozinka može imati maksimalno 30 znakova.</p>
   
-Ukoliko je lista javna, nakon unosa imena pritiskom na "Kreiraj" izraðuje se nova javna lista.</p>
+<p>Ukoliko je lista javna, nakon unosa imena pritiskom na "Kreiraj" izraðuje se nova javna lista.</p>
   
 <img src="Images/Karlo/Izrada nove liste - javna.png" />   
   
