--- a/Software/WareHome/HelpFile/6.3. Brisanje postojece liste.htm
+++ b/Software/WareHome/HelpFile/6.3. Brisanje postojece liste.htm
@@ -6,10 +6,10 @@
 </HEAD>
 <BODY>
 
-<p>Ukoliko želite obrisati izraðenu listu za kupovinu, potrebno ju je odabrati klikom na nju tako da jedna od æelija u njezinom redu bude plave boje, te pritisnuti na gumb "Obriši".  
+<p>Ukoliko želite obrisati izraðenu listu za kupovinu, potrebno ju je odabrati klikom na nju tako da jedna od celija u njezinom redu bude plave boje, te pritisnuti na gumb "Obriši".  
   
-Nakon klika na obriši, otvoriti æe se prozor u kojem trebate potvrditi da želite obrisati listu za kupovinu te sve namirnice koje se na njoj nalaze. Klikom na "Yes" lista i sve namirnice koje se nalaze na njoj bit æe obrisane.
-Klikom na "No", brisanje æe biti poništeno i bit æete vraæeni na prikaz svih lista.</p>
+Nakon klika na obriši, otvoriti ce se prozor u kojem trebate potvrditi da želite obrisati listu za kupovinu te sve namirnice koje se na njoj nalaze. Klikom na "Yes" lista i sve namirnice koje se nalaze na njoj bit ce obrisane.
+Klikom na "No", brisanje ce biti poništeno i bit cete vraceni na prikaz svih lista.</p>
 
 <img src="Images/Karlo/Brisanje liste.png" />
 
