--- a/Software/WareHome/HelpFile/6.4. Promjena naziva i postavki postojece liste.htm
+++ b/Software/WareHome/HelpFile/6.4. Promjena naziva i postavki postojece liste.htm
@@ -6,11 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Za promjenu naziva i postavki postojeæe liste prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od æelija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, u gornjem desnom kutu potrebno je kliknuti na gumb "Promijeni naziv".  
+<p>Za promjenu naziva i postavki postojece liste prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, u gornjem desnom kutu potrebno je kliknuti na gumb "Promijeni naziv".</p>  
   
-Klikom na to, otvoriti æe se prozor slièan onom za izradu nove liste za kupovinu, samo što æe svi podatci bit ispunjeni podatcima od liste kojoj mijenjamo postavke.  
+<p>Klikom na to, otvoriti ce se prozor slican onom za izradu nove liste za kupovinu, samo što ce svi podatci bit ispunjeni podatcima od liste kojoj mijenjamo postavke.</p>  
 
-Nakon unosa svih promjena koje želite, pritiskom na "Završi" promjene se spremaju.</p>
+<p>Nakon unosa svih promjena koje želite, pritiskom na "Završi" promjene se spremaju.</p>
 
 <img src="Images/Karlo/Preimenovanje liste.png" />
 
