--- a/Software/WareHome/HelpFile/6.6. Uklanjanje namirnice s liste za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6.6. Uklanjanje namirnice s liste za kupovinu.htm
@@ -6,10 +6,11 @@
 </HEAD>
 <BODY>
 
-<p>Za uklanjanje namirnice s postojeæe listu za kupovinu prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od æelija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, na isti naèin potrebno je odabrati namirnicu koju se želi obrisati. 
+<p>Za uklanjanje namirnice s postojece listu za kupovinu prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, na isti nacin potrebno je odabrati namirnicu koju se želi obrisati.</p> 
 
-Nakon što je namirnica odabrana, u potrebno je pritisnuti gumb "Ukloni" koji se nalazi pokraj gumba za dodavanje nove namirnice.  
-Klikom na gumb za uklanjanje namirnice, odabrana namirnica briše se iz liste za kupovinu.</p>
+<p>Nakon što je namirnica odabrana, u potrebno je pritisnuti gumb "Ukloni" koji se nalazi pokraj gumba za dodavanje nove namirnice.</p>
+  
+<p>Klikom na gumb za uklanjanje namirnice, odabrana namirnica briše se iz liste za kupovinu.</p>
 
 <img src="Images/Karlo/Brisanje sa liste.png" />
 
