--- a/Software/WareHome/HelpFile/7. Predvidanje potrosnje.htm
+++ b/Software/WareHome/HelpFile/7. Predvidanje potrosnje.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Klikom na "Predviðanje potrošnje namirnica", otvara se popis svih namirnica u domaæinstvu te njihovo predviðeno trajanje. Ukoliko niste èlan domaæinstva, ovaj dio aplikacije još ne možete koristiti. Molimo Vas, izradite novo domaæinstvo ili se prijavite u postojeæe.</p>
+<p>Klikom na "Predviðanje potrošnje namirnica", otvara se popis svih namirnica u domacinstvu te njihovo predviðeno trajanje. Ukoliko niste clan domacinstva, ovaj dio aplikacije još ne možete koristiti. Molimo Vas, izradite novo domacinstvo ili se prijavite u postojece.</p>
 
 </BODY>
 </HTML>
