--- a/Software/WareHome/HelpFile/7.1. Pregled predvidene potrošnje.htm
+++ b/Software/WareHome/HelpFile/7.1. Pregled predvidene potrošnje.htm
@@ -6,9 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Predviðena potrošnja namirnica prikazana je u tablici u kojoj se nalaze ID namirnice o kojoj je rijeè, naziv namirnice, dostupna kolièina, mjerna jedinica te u zadnjem redu je prikazano predviðeno trajanje namirnice u danima. Ovo predviðanje bit æe najtoènije nakon 6 mjeseci korištenja aplikacije.  
+<p>Predviðena potrošnja namirnica prikazana je u tablici u kojoj se nalaze ID namirnice o kojoj je rijec, naziv namirnice, dostupna kolicina, mjerna jedinica te u zadnjem redu je prikazano predviðeno trajanje namirnice u danima. Ovo predviðanje bit ce najtocnije nakon 6 mjeseci korištenja aplikacije.</p>  
   
-Predviðena potrošnja se raèuna na naèin da se prvo izraèuna prosjeèno trajanje jedne jedinice mjere namirnice u posljednjih 6 mjeseci, te se potom prema tome raèuna koliko bi dugo trebala trajati trenutna zaliha namirnica. Zbog toga, što više namirnicu koristite i što èešæe to unosite u aplikaciju, to æe predviðanje biti toènije.</p>
+<p>Predviðena potrošnja se racuna na nacin da se prvo izracuna prosjecno trajanje jedne jedinice mjere namirnice u posljednjih 6 mjeseci, te se potom prema tome racuna koliko bi dugo trebala trajati trenutna zaliha namirnica. Zbog toga, što više namirnicu koristite i što cešce to unosite u aplikaciju, to ce predviðanje biti tocnije.</p>
 
 <img src="Images/Karlo/Prikaz_predvidanja.png" />
 
