--- a/Software/WareHome/HelpFile/1. Uvod.htm
+++ b/Software/WareHome/HelpFile/1. Uvod.htm
@@ -6,14 +6,14 @@
 </HEAD>
 <BODY>
 
-<p>Kao što je bila i glavna ideja kod izrade dizajna same aplikacije, sve je izraðeno na naèin da bude što intuitivnije i što jednostavnije za korištenje. U ovom dokumentu detaljno je opisano kako se koristi svaka funkcija WareHome aplikacije, što je toèno prikazano na kojem zaslonu te èime æe klik na koji gumb rezultirati.  
+<p>Kao što je bila i glavna ideja kod izrade dizajna same aplikacije, sve je izraðeno na nacin da bude što intuitivnije i što jednostavnije za korištenje. U ovom dokumentu detaljno je opisano kako se koristi svaka funkcija WareHome aplikacije, što je tocno prikazano na kojem zaslonu te cime ce klik na koji gumb rezultirati.  
   
-U nastavku prikazana je slika zaslona aplikacije nakon prijave korisnika te prijave u domaæinstvo. Na njoj su, radi lakšeg snalaženja, brojevnim oznakama oznaèena iduæa poglavlja koja se nalaze u ovom dokumentu.</p>
+U nastavku prikazana je slika zaslona aplikacije nakon prijave korisnika te prijave u domacinstvo. Na njoj su, radi lakšeg snalaženja, brojevnim oznakama oznacena iduca poglavlja koja se nalaze u ovom dokumentu.</p>
 
 <img src="Images/Karlo/Home-screen.png" />
 
 <p>U gornjem lijevom kutu prikazan je logo naše aplikacije. Klikom na taj logo, osvježava se popis namirnica.  
-Ispod loga nalaze se osnovni podaci o prijavljenom korisniku i njegovom domaæinstvu.  
+Ispod loga nalaze se osnovni podaci o prijavljenom korisniku i njegovom domacinstvu.  
   
 U poglavljima koja slijede, broj oznake funkcije na slici poklapa se s brojem poglavlja u ovom dokumentu.</p>
 
