--- a/Software/WareHome/HelpFile/5. Koristenje email podsjetnika.htm
+++ b/Software/WareHome/HelpFile/5. Koristenje email podsjetnika.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Klikom na gumb "Raspored odlaska u kupovinu", prikazuje se prozor u kojem možemo postaviti raspored kada odlazimo u kupovinu. Postavljanjem dana i vremena odlaska u kupovinu, ukljuèujemo email podsjetnike za odlazak u kupovinu koji æe dolaziti na Vaš email unesen prilikom registracije. Svaki korisnik ima svoj raspored odlaska u kupovinu, te se raspored ne veže za domaæinstvo. No, ukoliko niste èlan domaæinstva, na email æe Vam dolaziti prazni podsjetnici zato što u podsjetniku dolaze samo namirnice koje se nalaze ispod optimalne kolièine unesene u domaæinstvo.</p>
+<p>Klikom na gumb "Raspored odlaska u kupovinu", prikazuje se prozor u kojem možemo postaviti raspored kada odlazimo u kupovinu. Postavljanjem dana i vremena odlaska u kupovinu, ukljucujemo email podsjetnike za odlazak u kupovinu koji ce dolaziti na Vaš email unesen prilikom registracije. Svaki korisnik ima svoj raspored odlaska u kupovinu, te se raspored ne veže za domacinstvo. No, ukoliko niste clan domacinstva, na email ce Vam dolaziti prazni podsjetnici zato što u podsjetniku dolaze samo namirnice koje se nalaze ispod optimalne kolicine unesene u domacinstvo.</p>
 
 </BODY>
 </HTML>
