--- a/Software/WareHome/HelpFile/6.1. Pregledavanje izradenih lista.htm
+++ b/Software/WareHome/HelpFile/6.1. Pregledavanje izradenih lista.htm
@@ -6,13 +6,13 @@
 </HEAD>
 <BODY>
 
-<p>Prva lista koju vidite nosi naziv "[WH] Potrošene namirnice". To je automatska lista na koju se automatski dodaju namirnice unesene u domaæinstvo koje se nalaze ispod optimalne kolièine. Tu listu nije moguæe ruèno ureðivati niti ju je moguæe obrisati, veæ iskljuèivo pregledavati namirnice koje se nalaze na njoj i ispisati ju.</p>
+<p>Prva lista koju vidite nosi naziv "[WH] Potrošene namirnice". To je automatska lista na koju se automatski dodaju namirnice unesene u domacinstvo koje se nalaze ispod optimalne kolicine. Tu listu nije moguce rucno ureðivati niti ju je moguce obrisati, vec iskljucivo pregledavati namirnice koje se nalaze na njoj i ispisati ju.</p>
 
 <img src= "Images/Karlo/Pregled lista - automatska.png" />
 
-<p>Sve ostale liste koje vidite ispod automatske liste ruèno su izraðene te ih možete ureðivati po volji.  
+<p>Sve ostale liste koje vidite ispod automatske liste rucno su izraðene te ih možete ureðivati po volji.  
   
-Za prikaz sadržaja odreðene liste, potrebno je odabrati ju jednostrukim klikom na nju da jedna od æelija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". </p>
+Za prikaz sadržaja odreðene liste, potrebno je odabrati ju jednostrukim klikom na nju da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". </p>
 
 <img src = "Images/Karlo/Pregled lista - rucna.png" />
 </BODY>
