--- a/Software/WareHome/HelpFile/6.5. Dodavanje namirnice na listu za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6.5. Dodavanje namirnice na listu za kupovinu.htm
@@ -6,12 +6,12 @@
 </HEAD>
 <BODY>
 
-<p>Za dodavanje nove namirnice na postojeæu listu za kupovinu prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od æelija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, u donjem desnom kutu potrebno je pritisnuti gumb "Dodaj".  
+<p>Za dodavanje nove namirnice na postojecu listu za kupovinu prvo je potrebno odabrati željenu listu jednostrukim klikom na nju tako da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". Nakon što se prikaže odabrana lista, u donjem desnom kutu potrebno je pritisnuti gumb "Dodaj".</p>  
   
-Nakon klika na gumb za dodavanje nove namirnice, prikazat æe se prozor za unos podatak o namirnici.  
-Naziv je obavezno polje, sve ostalo može se unositi po želji i potrebi.  
+<p>Nakon klika na gumb za dodavanje nove namirnice, prikazat ce se prozor za unos podatak o namirnici.  
+Naziv je obavezno polje, sve ostalo može se unositi po želji i potrebi.</p>  
   
-Nakon unosa naziva i svih ostalih željenih podataka, pritiskom na "Dodaj" namirnica se dodaje na listu.  </p>
+<p>Nakon unosa naziva i svih ostalih željenih podataka, pritiskom na "Dodaj" namirnica se dodaje na listu.</p>
 
 <img src="Images/Karlo/Dodavanje na listu.png" />
 
