helpfile.chm - stranica "Sadržaj" prenamijenjena u stranicu "O aplikaciji" - na tu stranicu dodan logo aplikacije - ažuriran helpfile.chm

--- a/Software/WareHome/HelpFile/0 Sadržaj.htm
+++ b/Software/WareHome/HelpFile/0 Sadržaj.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Antun ili Kristijan</p>
+<p>WareHome je aplikacija koja se koristi za pracenje kolicine namirnica i potrošnih stvari koje trenutno korisnik ima kod kuce. U nju korisnik može unijeti koju kolicinu nekog proizvoda ima kod kuce (npr. Šecera), te nakon što odredenu kolicinu nekog proizvoda potroši, to upiše u aplikaciju. Iz toga, aplikacija mu prikaže koliko još odredenog proizvoda mu je ostalo kod kuce. Nadalje, korisnik u aplikaciju može upisati željenu optimalnu kolicinu odredene namirnice, te kada kolicina te namirnice padne ispod postavljenog praga, aplikacija ce korisnika podsjetiti da tu namirnicu mora kupiti sljedeci put kad ide u ducan. Uz to, aplikacija analizira potrošnju odredenog proizvoda, te iz toga procjenjuje kada ce kojeg proizvoda ponestati. Korisnik, takoder, u aplikaciju može upisati raspored odlaska u ducan, pa ce ga aplikacija na dan odlaska u kupovinu podsjetiti, te izlistati namirnice koje su ispod optimalnog praga. Osim svega toga, korisnik može sam upisivati svoju listu za kupovinu, koja može biti privatna ili dijeljena s domacinstvom.</p>
+
+<img src = "Images/Logo.png" />
 
 </BODY>
 </HTML>
