Update 3.1. Prijava u postojece domacinstvo.htm

--- a/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
+++ b/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Kristijan</p>
+<p>Nakon što korisnik na glavnom ekranu klikne gumb 'Pridruži se domaćinstvu', otvara se mali prozor sa poljem za upis naziva domaćinstva te gumb 'Pridruži se' za potvrdu unosa naziva i pridruživanje domaćinstvu. Pridruživanje domaćinstvu</p>
 
+<img src="Images/Kristijan/Prijava.png" /> 
+  
 </BODY>
 </HTML>
