Update 3.2. Izrada novog domacinstva.htm

--- a/Software/WareHome/HelpFile/3.2. Izrada novog domacinstva.htm
+++ b/Software/WareHome/HelpFile/3.2. Izrada novog domacinstva.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Kristijan</p>
+<p>Nakon što korisnik na glavnom ekranu klikne gumb 'Izradi domaćinstvo', otvara se mali prozor sa poljem za upis naziva domaćinstva te gumb 'Izradi domaćinstvo' za potvrdu unosa naziva i uspješnu izradu domaćinstva.</p>
 
+<img src="Images/Kristijan/Izrada domaćinstva.png" />  
+  
 </BODY>
 </HTML>
