--- a/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
+++ b/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
@@ -8,7 +8,7 @@
 
 <p>Nakon što korisnik na glavnom ekranu klikne gumb 'Pridruži se domaćinstvu', otvara se mali prozor sa poljem za upis naziva domaćinstva te gumb 'Pridruži se' za potvrdu unosa naziva i pridruživanje domaćinstvu. Pridruživanje domaćinstvu</p>
 
-<img src="Images/Kristijan/Prijava.png" /> 
+<img src="Images/Kristijan/Pridruživanje domaćinstvu.png" /> 
   
 </BODY>
 </HTML>
