Update 7.2. Ispis predvidene potrosnje.htm

--- a/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
+++ b/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Kristijan</p>
+<p>Korisnik nakon otvaranja predviđanja potrošnje može u donjem desnom kutu kliknuti gumb 'Ispiši' koji otvara izbor direktorija u koji će korisnik spremiti predviđenu potrošnu u PDF formatu.</p>
 
+<img src="Images/Kristijan/Ispis potrošnje.png" />  
+ 
 </BODY>
 </HTML>
