Update 8. Prijava problema.htm

--- a/Software/WareHome/HelpFile/8. Prijava problema.htm
+++ b/Software/WareHome/HelpFile/8. Prijava problema.htm
@@ -6,7 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Kristijan</p>
+<p>Ukoliko korisnik uoči problem u radu aplikacije može klikom na crveni gumb u gornjem desnom kutu glavnog zaslona otvoriti prozor sa poljem u koje korisnik opisuje svoj problem. Klikom na gumb pošalji prijavu, korisnik šalje opis svog problema developerima na: warehomeapp@gmail.com</p>
 
+<img src="Images/Kristijan/Prijava.png" />  
+  
 </BODY>
 </HTML>
