--- a/Software/WareHome/HelpFile/3. Rad s domacinstvima.htm
+++ b/Software/WareHome/HelpFile/3. Rad s domacinstvima.htm
@@ -8,7 +8,7 @@
 
 <p>Kada se korisnik uspješno registrira, aplikacija mu izbacuje obavijest da nije član domaćinstva. Nakon što korisnik pročita obavijest i klikne na gumb 'OK' otvara se početni tj. glavni zaslon aplikacije na kojem se mogu vidjet opcije 'Izradi domaćinstvo' i 'Pridruži se domaćinstvu', te također natpis koji ponovo podsjeća korisnika da još nije član domaćinstva.</p>
 
-<img src="Images/Kristijan/Početno.png" />  
+<img src="Images/Kristijan/Pocetno.png" />  
   
 </BODY>
 </HTML>
