--- a/Software/WareHome/HelpFile/8. Prijava problema.htm
+++ b/Software/WareHome/HelpFile/8. Prijava problema.htm
@@ -8,7 +8,7 @@
 
 <p>Ukoliko korisnik uoči problem u radu aplikacije može klikom na crveni gumb u gornjem desnom kutu glavnog zaslona otvoriti prozor sa poljem u koje korisnik opisuje svoj problem. Klikom na gumb pošalji prijavu, korisnik šalje opis svog problema developerima na: warehomeapp@gmail.com</p>
 
-<img src="Images/Kristijan/Prijava.png" />  
+<img src="Images/Kristijan/Prijava problema.png" />  
   
 </BODY>
 </HTML>
