Update 6.7. Ispis liste za kupovinu.htm

--- a/Software/WareHome/HelpFile/6.7. Ispis liste za kupovinu.htm
+++ b/Software/WareHome/HelpFile/6.7. Ispis liste za kupovinu.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Klikom na 'Prikaži' otvara se prozor za opcijom ispisa u donjem lijevom kutu. Nakon što korisnik klikne 'Ispis' otvara se prozor sa mogućnostima ispisa sa lijeve strane i gumbom 'Ispiši' koji otvara izbor direktorija u koji će korisnik spremiti listu u PDF formatu.</p>
+<p>Klikom na 'Prikazi' otvara se prozor za opcijom ispisa u donjem lijevom kutu. Nakon sto korisnik klikne 'Ispis' otvara se prozor sa mogucnostima ispisa sa lijeve strane i gumbom 'Ispisi' koji otvara izbor direktorija u koji ce korisnik spremiti listu u PDF formatu.</p>
 
 <img src="Images/Kristijan/Ispis liste.png" />
   
