Update 3.1. Prijava u postojece domacinstvo.htm

--- a/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
+++ b/Software/WareHome/HelpFile/3.1. Prijava u postojece domacinstvo.htm
@@ -6,9 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Nakon što korisnik na glavnom ekranu klikne gumb 'Pridruži se domaćinstvu', otvara se mali prozor sa poljem za upis naziva domaćinstva te gumb 'Pridruži se' za potvrdu unosa naziva i pridruživanje domaćinstvu. Pridruživanje domaćinstvu</p>
+<p>Nakon sto korisnik na glavnom ekranu klikne gumb 'Pridruzi se domacinstvu', otvara se mali prozor sa poljem za upis naziva domacinstva te gumb 'Pridruzi se' za potvrdu unosa naziva i pridruzivanje domacinstvu.</p>
 
-<img src="Images/Kristijan/Pridruživanje domaćinstvu.png" /> 
+<img src="Images/Kristijan/Pridruzivanje domacinstvu.png" /> 
   
 </BODY>
 </HTML>
