--- a/Software/WareHome/HelpFile/3.2. Izrada novog domacinstva.htm
+++ b/Software/WareHome/HelpFile/3.2. Izrada novog domacinstva.htm
@@ -6,9 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Nakon što korisnik na glavnom ekranu klikne gumb 'Izradi domaćinstvo', otvara se mali prozor sa poljem za upis naziva domaćinstva te gumb 'Izradi domaćinstvo' za potvrdu unosa naziva i uspješnu izradu domaćinstva.</p>
+<p>Nakon sto korisnik na glavnom ekranu klikne gumb 'Izradi domacinstvo', otvara se mali prozor sa poljem za upis naziva domacinstva te gumb 'Izradi domacinstvo' za potvrdu unosa naziva i uspjesnu izradu domacinstva.</p>
 
-<img src="Images/Kristijan/Izrada domaćinstva.png" />  
+<img src="Images/Kristijan/Izrada domacinstva.png" />  
   
 </BODY>
 </HTML>
