Update 7.2. Ispis predvidene potrosnje.htm

--- a/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
+++ b/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
@@ -6,9 +6,9 @@
 </HEAD>
 <BODY>
 
-<p>Korisnik nakon otvaranja predviđanja potrošnje može u donjem desnom kutu kliknuti gumb 'Ispiši' koji otvara izbor direktorija u koji će korisnik spremiti predviđenu potrošnu u PDF formatu.</p>
+<p>Korisnik nakon otvaranja predviđanja potrosnje moze u donjem desnom kutu kliknuti gumb 'Ispisi' koji otvara izbor direktorija u koji ce korisnik spremiti predviđenu potrosnu u PDF formatu.</p>
 
-<img src="Images/Kristijan/Ispis potrošnje.png" />  
+<img src="Images/Kristijan/Ispis potrosnje.png" />  
  
 </BODY>
 </HTML>
