--- a/Software/WareHome/HelpFile/3. Rad s domacinstvima.htm
+++ b/Software/WareHome/HelpFile/3. Rad s domacinstvima.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Kada se korisnik uspjesno registrira, aplikacija mu izbacuje obavijest da nije clan domacinstva. Nakon sto korisnik procita obavijest i klikne na gumb 'OK' otvara se pocetni tj. glavni zaslon aplikacije na kojem se mogu vidjet opcije 'Izradi domacinstvo' i 'Pridruzi se domacinstvu', te također natpis koji ponovo podsjeca korisnika da jos nije clan domacinstva.</p>
+<p>Kada se korisnik uspjesno registrira, aplikacija mu izbacuje obavijest da nije clan domacinstva. Nakon sto korisnik procita obavijest i klikne na gumb 'OK' otvara se pocetni tj. glavni zaslon aplikacije na kojem se mogu vidjet opcije 'Izradi domacinstvo' i 'Pridruzi se domacinstvu', te takoder natpis koji ponovo podsjeca korisnika da jos nije clan domacinstva.</p>
 
 <img src="Images/Kristijan/Pocetno.png" />  
   
