--- a/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
+++ b/Software/WareHome/HelpFile/7.2. Ispis predvidene potrosnje.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Korisnik nakon otvaranja predviđanja potrosnje moze u donjem desnom kutu kliknuti gumb 'Ispisi' koji otvara izbor direktorija u koji ce korisnik spremiti predviđenu potrosnu u PDF formatu.</p>
+<p>Korisnik nakon otvaranja predviđanja potrosnje moze u donjem desnom kutu kliknuti gumb 'Ispisi' koji otvara izbor direktorija u koji ce korisnik spremiti predvidenu potrosnu u PDF formatu.</p>
 
 <img src="Images/Kristijan/Ispis potrosnje.png" />  
  
