--- a/Software/WareHome/HelpFile/8. Prijava problema.htm
+++ b/Software/WareHome/HelpFile/8. Prijava problema.htm
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 
-<p>Ukoliko korisnik uoci problem u radu aplikacije moze klikom na crveni gumb u gornjem desnom kutu glavnog zaslona otvoriti prozor sa poljem u koje korisnik opisuje svoj problem. Klikom na gumb posalji prijavu, korisnik salje opis svog problema developerima na: warehomeapp@gmail.com</p>
+<p>Ukoliko korisnik uoci problem u radu aplikacije moze klikom na crveni gumb u gornjem desnom kutu glavnog zaslona otvoriti prozor sa poljem u koje korisnik opisuje svoj problem. Klikom na gumb Posalji prijavu, korisnik salje opis svog problema developerima na: warehomeapp@gmail.com</p>
 
 <img src="Images/Kristijan/Prijava problema.png" />  
   
