Ažuriranje helpfile.chm - dodana slika za autentikaciju - uređeno poglavlje koje se bavi pregledavanjem izrađenih lista (dodano o autentikaciji)

--- a/Software/WareHome/HelpFile/6.1. Pregledavanje izradenih lista.htm
+++ b/Software/WareHome/HelpFile/6.1. Pregledavanje izradenih lista.htm
@@ -10,10 +10,15 @@
 
 <img src= "Images/Karlo/Pregled lista - automatska.png" />
 
-<p>Sve ostale liste koje vidite ispod automatske liste rucno su izraðene te ih možete ureðivati po volji.  
+<p>Sve ostale liste koje vidite ispod automatske liste rucno su izraðene te ih možete ureðivati po volji.</p>
   
-Za prikaz sadržaja odreðene liste, potrebno je odabrati ju jednostrukim klikom na nju da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži". </p>
+<p>Za prikaz sadržaja odreðene liste, potrebno je odabrati ju jednostrukim klikom na nju da jedna od celija u njezinom redu bude plave boje, te potom pritisnuti na gumb "Prikaži".</p>
 
 <img src = "Images/Karlo/Pregled lista - rucna.png" />
+
+<p>Ukoliko je odabrana lista privatna, klikom na "Prikaži" otvorit ce se autentikacijski prozorcic u koji trebate unijeti lozinku za pristup listu. Nakon što unesete lozinku, klikom na "Prikaži" u autentikacijskm prozorcicu, lista se prikazuje ukoliko je lozinka tocna, a ukoliko je lozinka pogrešna, izbacuje se poruka o greški. Korisnik ima 3 pokušaja da unese tocnu lozinku. Nakon što se pogrešna lozinka unese 3 puta zaredom, prozorcic za unos lozinke se zatvara.</p>
+
+<img src = "Images/Karlo/Autentikacija.png" />
+
 </BODY>
 </HTML>
